import java.util.ArrayList;

public class Llave extends EtapaMundial{
    public Llave(String descripcionEtapa, ArrayList<Partido> partidos) {
        super(descripcionEtapa, partidos);
    }
    public void armarLlaveFinal(Equipo Equipo1,Equipo Equipo2){


    }
    public void armarLlaveSemi(Equipo Equipo1,Equipo Equipo2,Equipo Equipo3,Equipo Equipo4){


    }
    public void armarLlaveCuartos(Equipo Equipo1,Equipo Equipo2){


    }
    public void armarLlaveOctavos(Equipo Equipo1,Equipo Equipo2){


    }
    @Override
    public ArrayList<Equipo> getEquiposQueAvanzan() {
        return super.getEquiposQueAvanzan();
    }


}
